/* *******************************************************************************************
 * Copyright (c) 2023 by RobotPatient Simulators
 *
 * Authors: Richard Kroesen
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction,
 *
 * including without limitation the rights to use, copy, modify, merge, publish, distribute,
 * sublicense, and/or sell copies of the Software, and to permit persons to whom the Software
 * is furnished to do so,
 *
 * subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
 *
 * IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
 * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
 * ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 * OTHER DEALINGS IN THE SOFTWARE.
 ***********************************************************************************************/

#ifndef HUB_REGISTERS_HPP
#define HUB_REGISTERS_HPP

#include <stdint.h>
#include <inp_register.hpp>

class HubRegisters {
 private:
  INP_register** regs;         // Array of pointers, undefined length.
  uint8_t registers_counter_;  // Length of the array

 public:
  explicit HubRegisters(uint8_t reg_amount);
  ~HubRegisters();

  INP_register* getRegister(RegisterAddress_t address);
  void write_register(RegisterAddress_t addr, uint8_t val);
  uint8_t read_register(RegisterAddress_t addr);
  uint8_t get_register_counter(void);
};

#endif  // HUB_REGISTERS_HPP
